--- a/metformin.html
+++ b/metformin.html
@@ -6,21 +6,28 @@
 <title>Metformin – sonkoroowga (diabetes)</title>
 
 <style>
+:root{
+  --c1:#0066cc;
+  --c2:#00a676;
+  --accent:#00a676;
+  --link:#00509e;
+}
+
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
-header { background:linear-gradient(135deg,#0066cc,#00a676); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15); }
+header { background:linear-gradient(135deg,var(--c1),var(--c2)); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15); }
 header h1 { margin:0 0 4px; font-size:1.8rem; }
 header p { margin:0; font-size:0.95rem; }
 
 main { max-width:820px; margin:18px auto 32px; padding:0 14px; }
 
-a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:#00509e; font-size:0.9rem; }
+a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:var(--link); font-size:0.9rem; }
 a.back span { font-size:1.1rem; }
 
 .langbar{
   display:flex; align-items:center; gap:10px; flex-wrap:wrap;
   background:#ffffff; border-radius:12px; padding:10px 12px;
   margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
-  border-left:4px solid #00a676;
+  border-left:4px solid var(--accent);
 }
 .langbar label{ font-size:0.9rem; color:#123047; font-weight:600; }
 .langbar select{
@@ -30,7 +37,7 @@ a.back span { font-size:1.1rem; }
 
 .card{
   background:#ffffff; border-radius:14px; padding:16px 16px 10px; margin-bottom:14px;
-  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid #00a676;
+  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid var(--accent);
 }
 .drug-meta{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
 .drug-info{ display:flex; align-items:center; gap:10px; }
@@ -186,6 +193,41 @@ a.back span { font-size:1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+const THEME = {
+  so:{c1:"#0066cc",c2:"#00a676",accent:"#00a676",link:"#00509e"},
+  da:{c1:"#0b5ed7",c2:"#198754",accent:"#198754",link:"#0b5ed7"},
+  en:{c1:"#0d6efd",c2:"#20c997",accent:"#20c997",link:"#0d6efd"},
+  ar:{c1:"#7c3aed",c2:"#0ea5e9",accent:"#0ea5e9",link:"#1d4ed8"},
+  tr:{c1:"#dc2626",c2:"#16a34a",accent:"#16a34a",link:"#b91c1c"},
+  ur:{c1:"#0f766e",c2:"#22c55e",accent:"#22c55e",link:"#0f766e"},
+  fa:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  prs:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  ps:{c1:"#1e40af",c2:"#16a34a",accent:"#16a34a",link:"#1e40af"}
+};
+
+function applyTheme(lang){
+  const t = THEME[lang] || THEME.so;
+  const r = document.documentElement.style;
+  r.setProperty("--c1", t.c1);
+  r.setProperty("--c2", t.c2);
+  r.setProperty("--accent", t.accent);
+  r.setProperty("--link", t.link);
+}
+function stripTags(s){ return String(s || "").replace(/<[^>]*>?/gm, ""); }
+function setDirLang(lang){
+  document.documentElement.lang = lang;
+  document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
+}
+function fillList(id, arr){
+  const ul = document.getElementById(id);
+  ul.innerHTML = "";
+  (arr || []).forEach(txt => {
+    const li = document.createElement("li");
+    li.innerHTML = txt;
+    ul.appendChild(li);
+  });
+}
+
 const T = {
   so: {
     pageTitle: "Metformin – sonkoroowga (diabetes)",
@@ -205,14 +247,14 @@ const T = {
 
     sec2Title: "Qiyaasta (Dosering)",
     sec2: [
-      "Badanaa waxaa lagu bilaabaa qiyaas yar <span class='highlight'>1–2 jeer maalintii</span>, iyadoo <span class='highlight'>cunto la qaato</span>.",
+      "Badanaa waxaa lagu bilaabaa qiyaas yar <span class='highlight'>1–2 jeer maalintii</span>.",
       "Dhakhtarka ayaa si tartiib ah u kordhiya qiyaasta haddii loo baahdo."
     ],
 
     sec3Title: "Waxyeellooyinka (Bivirkninger)",
     sec3: [
       "Calool-xanuun, shuban ama lalabo – badanaa way yaraadaan dhowr toddobaad ka dib.",
-      "Haddii aad yeelato <span class='highlight'>daal daran, neef-qabatin, ama calool-xanuun xooggan</span> → raadi gargaar degdeg ah (gaar ahaan haddii kilyuhu aysan si fiican u shaqayn)."
+      "Haddii aad yeelato <span class='highlight'>daal daran, neef-qabatin, ama calool-xanuun xooggan</span> → La xiriir dhakhtarkaaga."
     ],
 
     sec4Title: "Isdhexgalka daawooyinka (Interaktioner)",
@@ -223,7 +265,7 @@ const T = {
 
     sec5Title: "Digniino (Advarsler)",
     sec5: [
-      "Haddii aad leedahay <span class='highlight'>kilyo xanuun</span>, <span class='highlight'>tabar-darro wadnaha</span> ama <span class='highlight'>xanuun culus</span>, dhakhtar ha go’aamiyo isticmaalka."
+      "Haddii aad leedahay <span class='highlight'>kilyo xanuun</span>, <span class='highlight'>tabar-darro wadnaha</span> ama <span class='highlight'>xanuun culus</span>, la xiriir dhakhtarkaaga."
     ],
 
     sec6Title: "Ramadaan iyo soonka (Ramadan og faste)",
@@ -234,15 +276,16 @@ const T = {
 
     sec7Title: "Cunto iyo cabitaan (Mad og drikke)",
     sec7: [
-      "Badanaa ku qaado metformin <span class='highlight'>cuntada</span> ama <span class='highlight'>cunno la socota</span> si calooshu u yara dhibtooto.",
-      "Ka fogow <span class='highlight'>khamri badan</span> – waxay kordhin kartaa khataraha (gaar ahaan haddii aad xanuunsan tahay ama kilyo dhibaato jirto)."
+      "Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya.",
+      "Ka fogow <span class='highlight'>khamri badan</span> – wuxuu kordhin karaa in aad dawakhdo."
     ],
 
     sec8Title: "Kaydinta daawada (Opbevaring)",
     sec8: [
       "Ku hay meel ka fog carruurta yar yar, kana hooseysa 25°C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan daawada marka ay dhaafto taariikhda “EXP”. Wixii soo haray, ku celi farmashiyaha."
+      "Ha qaadan daawada marka ay dhaafto <span class='highlight'>taariikhda dhicitaanka</span> ama haddii midab/qaab isbeddelo.",
+      "Wixii soo haray, ku celi farmashiyaha."
     ],
 
     footer1: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
@@ -267,14 +310,14 @@ const T = {
 
     sec2Title: "Dosering",
     sec2: [
-      "Startes ofte med lav dosis <span class='highlight'>1–2 gange dagligt</span> sammen med mad.",
+      "Startes ofte med lav dosis <span class='highlight'>1–2 gange dagligt</span>.",
       "Dosis øges gradvist efter aftale med lægen."
     ],
 
     sec3Title: "Bivirkninger",
     sec3: [
       "Mavegener: kvalme, løs mave/diarré eller mavesmerter – bliver ofte bedre efter nogle uger.",
-      "Søg akut hjælp ved <span class='highlight'>udtalt træthed, åndenød eller stærke mavesmerter</span> (især ved nyreproblemer)."
+      "Kontakt lægen ved <span class='highlight'>udtalt træthed, åndenød eller stærke mavesmerter</span> (især ved nyreproblemer)."
     ],
 
     sec4Title: "Interaktioner",
@@ -296,14 +339,15 @@ const T = {
 
     sec7Title: "Mad og drikke",
     sec7: [
-      "Tag metformin <span class='highlight'>sammen med mad</span> for at mindske mavegener.",
-      "Undgå meget alkohol – kan øge risikoen for problemer (især ved sygdom/nyreproblemer)."
+      "Kan tages med eller uden mad.",
+      "Undgå meget alkohol – det kan øge svimmelhed."
     ],
 
     sec8Title: "Opbevaring",
     sec8: [
       "Opbevares utilgængeligt for børn, under 25°C og i original emballage.",
-      "Brug ikke efter “EXP”. Aflever rester på apoteket."
+      "Brug ikke efter <span class='highlight'>udløbsdatoen</span> eller hvis tabletterne ændrer udseende.",
+      "Aflever rester på apoteket."
     ],
 
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
@@ -328,14 +372,14 @@ const T = {
 
     sec2Title: "Dose",
     sec2: [
-      "Often started at a low dose <span class='highlight'>1–2 times daily</span> with food.",
+      "Often started at a low dose <span class='highlight'>1–2 times daily</span>.",
       "The dose may be increased gradually by your doctor."
     ],
 
     sec3Title: "Side effects",
     sec3: [
       "Stomach upset (nausea, diarrhea, abdominal pain) — often improves after a few weeks.",
-      "Get urgent help if you have <span class='highlight'>severe tiredness, shortness of breath, or strong stomach pain</span> (especially with kidney problems)."
+      "Contact your doctor if you have <span class='highlight'>severe tiredness, shortness of breath, or strong stomach pain</span> (especially with kidney problems)."
     ],
 
     sec4Title: "Interactions",
@@ -357,48 +401,36 @@ const T = {
 
     sec7Title: "Food and drink",
     sec7: [
-      "Take metformin <span class='highlight'>with food</span> to reduce stomach side effects.",
-      "Avoid heavy alcohol intake — it may increase risks (especially when unwell or with kidney issues)."
+      "Can be taken with or without food.",
+      "Avoid heavy alcohol — it may increase dizziness."
     ],
 
     sec8Title: "Storage",
     sec8: [
       "Keep out of reach of children, below 25°C, in the original package.",
-      "Do not use after “EXP”. Return leftovers to the pharmacy."
+      "Do not use after the <span class='highlight'>expiry date</span> or if tablets change appearance.",
+      "Return leftovers to the pharmacy."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
-  },
-
-  /* Hvis du ønsker, kan du kopiere ar/tr/ur/fa/prs/ps fra dine tidligere filer
-     eller lade dem stå tomme indtil senere. */
+  }
 };
 
-function setDirLang(lang){
-  document.documentElement.lang = lang;
-  document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
-}
-function fillList(id, arr){
-  const ul = document.getElementById(id);
-  ul.innerHTML = "";
-  (arr || []).forEach(txt => {
-    const li = document.createElement("li");
-    li.innerHTML = txt;
-    ul.appendChild(li);
-  });
-}
 function applyLang(lang){
+  applyTheme(lang);
   const d = T[lang] || T.so;
-  setDirLang(lang);
 
-  document.title = d.pageTitle;
-  document.getElementById("hdrH1").textContent = d.hdrH1;
+  setDirLang(lang);
+  document.title = stripTags(d.pageTitle);
+
+  document.getElementById("hdrH1").textContent = stripTags(d.hdrH1);
   document.getElementById("hdrP").textContent = d.hdrP;
+
   document.getElementById("backText").textContent = d.backText;
   document.getElementById("langLabel").textContent = d.langLabel;
 
-  document.getElementById("drugName").textContent = d.drugName;
+  document.getElementById("drugName").textContent = stripTags(d.drugName);
   document.getElementById("drugForm").textContent = d.drugForm;
   document.getElementById("badgeText").textContent = d.badgeText;
 
@@ -432,7 +464,6 @@ function applyLang(lang){
 // Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
-
 document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
 applyLang(document.getElementById("langSelect").value);
 
